erDiagram
    %% Location & Lookup Group - AgriLink Database
    
    locations {
        uuid id PK
        string country
        string state
        string city
        string district
        timestamp createdAt
    }
    
    delivery_options {
        uuid id PK
        string name
    }
    
    payment_terms {
        uuid id PK
        string name
    }
    
    status_types {
        uuid id PK
        string name
    }
    
    %% Tables that reference these lookup tables
    products {
        uuid id PK
        uuid locationId FK
        array deliveryOptions
        array paymentTerms
    }
    
    offers {
        uuid id PK
        uuid statusId FK
    }
    
    user_profiles {
        uuid id PK
        uuid locationId FK
    }
    
    addresses {
        uuid id PK
        uuid locationId FK
    }
    
    %% Relationships with detailed column mappings
    locations ||--o{ products : "locations.id → products.locationId (product location)"
    locations ||--o{ user_profiles : "locations.id → user_profiles.locationId (user location)"
    locations ||--o{ addresses : "locations.id → addresses.locationId (address location)"
    
    status_types ||--o{ offers : "status_types.id → offers.statusId (offer status)"
    
    %% Array field relationships (referenced by array fields in products)
    delivery_options ||--o{ products : "delivery_options.id → products.deliveryOptions (array reference)"
    payment_terms ||--o{ products : "payment_terms.id → products.paymentTerms (array reference)"
